# opencv_create_samples_modified

./: CMakeLists.txt
Header Files/: utility.hpp
Source Files/: createsamples.cpp  main.cpp  utility.cpp
